# docs/swagger.yaml
@@ -152,6 +152,32 @@ definitions:
       updatedAt:
         type: string
     type: object
+  response.RecentStockMovementListResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/response.RecentStockMovementResponse'
+        type: array
+    type: object
+  response.RecentStockMovementResponse:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      productId:
+        type: integer
+      productName:
+        type: string
+      quantity:
+        type: integer
+      reason:
+        type: string
+      remainingQuantity:
+        type: integer
+      type:
+        type: string
+    type: object
   response.StockMovementListResponse:
     properties:
       data:
@@ -426,6 +452,30 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Retrieve inventory dashboard data
+      tags:
+      - Inventory
+  /inventory/movements:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of recent stock movements
+      parameters:
+      - description: Max number of items to retrieve
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.RecentStockMovementListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Retrieve the recent stock movements
       tags:
       - Inventory
   /products:
